APP/whoami/whoami-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: whoami
spec:
  rules:
  - host: whoami.51.158.146.182.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: whoami
          servicePort: 80
